[package]
name = "layuit"
authors = ["Yrgh"]
version = "1.2.2"
edition = "2024"
description = "A UI layout library for Rust"
license = "MIT"
keywords = ["ui", "layout", "organization", "gui", "tree"]
categories = ["gui", "visualization"]
repository = "https://github.com/Yrgh/layuit"

[dependencies]
indexmap = "2.14.0"
thunderdome = "0.6.1"
